# ce-secrets-rs

./: Cargo.toml  README.md
src/: auth.rs  crypto.rs  device.rs  enc.rs  lib.rs  records.rs
tests/: interop.rs
