[package]
name = "ce-secrets-rs"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for ce-secrets — byte-exact interop with the canonical JS vault: device keys, ECIES master-wrap, AES-GCM secrets, and the ECDSA challenge-response auth primitive."
license = "AGPL-3.0-only"
repository = "https://github.com/ce-net/ce-secrets-rs"
keywords = ["ce", "secrets", "ecies", "ecdsa", "auth"]
categories = ["cryptography", "authentication", "api-bindings"]

[dependencies]
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "jwk", "arithmetic"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
hkdf = "0.12"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Randomness for the WRITE side (ephemeral ECDH keys, IVs, device-key generation). The READ/auth
# surface stays deterministic; only seal/wrap/generate pull entropy from the OS RNG.
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
hex = "0.4"
